[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_menu")

[node name="BGOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.02, 0.06, 0.95)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.5, 1)
theme_override_font_sizes/font_size = 64
text = "GEOMETRY DASH"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Select a Level"
horizontal_alignment = 1

[node name="LevelsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Level1" type="Button" parent="CenterContainer/VBoxContainer/LevelsContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Level 1
The Beginning
▶ PLAY"

[node name="Level2" type="Button" parent="CenterContainer/VBoxContainer/LevelsContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Level 2
The Journey
▶ PLAY"

[node name="Level3" type="Button" parent="CenterContainer/VBoxContainer/LevelsContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
focus_mode = 2
disabled = true
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_colors/font_disabled_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "Level 3
???
COMING SOON"

[node name="Level4" type="Button" parent="CenterContainer/VBoxContainer/LevelsContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
focus_mode = 2
disabled = true
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_colors/font_disabled_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "Level 4
???
COMING SOON"

[node name="AttemptsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "Total Attempts: 0"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "Click a level to play"
horizontal_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/LevelsContainer/Level1" to="." method="_on_level1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LevelsContainer/Level2" to="." method="_on_level2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LevelsContainer/Level3" to="." method="_on_level3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LevelsContainer/Level4" to="." method="_on_level4_pressed"]
